Adding changes to the Outlook tool

--- a/styles/CSS/styles.css
+++ b/styles/CSS/styles.css
@@ -31,6 +31,10 @@ body {
     background-image: url('../Images/sendEmail.png');
 }
 
+#sendAppointment {
+    background-image: url('../Images/sendAppointments.png');
+}
+
 #CheckEmailFolder {
     background-image: url('../Images/checkEmails.png');
 }
@@ -60,7 +64,7 @@ body {
 #home {
     background-image: url('../Images/home.png');
     position: relative;
-    top:25% 
+    top:19% 
 }
 
 #home:hover {
